--- a/templates/question.html
+++ b/templates/question.html
@@ -5,16 +5,22 @@
   <div class="content">
     <div class="question-page border">
       <div class="question-page-avatar">
-        <a href="/user/{{ question.user.username }}">
+        <a href="/profile/{{ question.user.username }}">
           <img src="/{{ question.user.profile.avatar.url }}" class="img-circle question-page-avatar-img">
         </a>
       </div>
-      <div class="question-page-like">
-        <a href="#action">
-          <img src="{% static 'imgs/like.png'%}" class="img-circle question-page-like-img">
+      <a class="question-page-like">
+        <a class="likebutton" dataid="{{ question.id }}">
+          {% for like in request.user.profile.questionlikes.all %}
+            {% if question.id == like.question.id and like.is_liked %}
+              <img src="{% static 'imgs/yet_like.png'%}" class="img-circle question-page-like-img">
+            {% else %}
+              <img src="{% static 'imgs/like.png'%}" class="img-circle question-page-like-img">
+            {% endif %}
+            {% endfor %}
         </a>
         <p class="question-page-like-count">{{ question.rating }}</p>
-      </div>
+      </a>
       <div class="question-page-title">
         <a href="/question/id{{ question.id }}">{{ question.title }}</a>
       </div>
@@ -36,24 +42,41 @@
       <div class="question-page-answers border">
         <div class="answer">
           <div class="question-page-answer-avatar">
-            <a href="/user/{{ answer.user.username }}">
+            <a href="/profile/{{ answer.user.username }}">
               <img src="/{{ answer.user.profile.avatar.url }}" class="img-circle question-page-answer-avatar-img">
             </a>
           </div>
-          <div class="question-page-answer-like">
-            <a href="#action">
-              <img src="{% static 'imgs/like.png' %}" class="img-circle question-page-answer-like-img">
-            </a>
+          <a class="question-page-answer-like">
+              <a class="alikebutton" dataid="{{ question.id }}">
+                {% for like in request.user.profile.answerlikes.all %}
+                  {% if answer.id == like.answer.id and like.is_liked %}
+                    <img src="{% static 'imgs/yet_like.png'%}" class="img-circle question-page-like-img">
+                  {% else %}
+                    <img src="{% static 'imgs/like.png'%}" class="img-circle question-page-like-img">
+                  {% endif %}
+                {% endfor %}
+              </a>
             <p class="question-page-answer-like-count">{{ answer.user.profile.rating }}</p>
-          </div>
+          </a>
           <div class="question-page-answer-description">
             <p>
               {{ answer.text }}
             </p>
           </div>
+            {% if question.user == request.user %}
+              <div class="checkbox">
+                <label><input class="anscheck" type="checkbox" ansid="{{ answer.id }}" qid="{{ question.id }}" value="" 
+                  {% if answer.is_correct %}
+                   checked
+                  {%endif%}>
+                  Correct!
+                </label>
+              </div> 
+            {% endif %}
         </div>
       </div>
       {% endfor %}
+      {% if request.user.is_authenticated %}
       <div class="question-page-input-form">
         <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -65,6 +88,7 @@
         <button type="submit" class="btn btn-default login-btn">Send</button>
       </form>
       </div>
+      {% endif %} 
     </div>
   </div>
 {% endblock %}
